cluster/apps/plex-route/proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex-proxy
  namespace: media
  labels:
    app.kubernetes.io/name: plex-proxy
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: plex-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plex-proxy
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: socat
          image: alpine/socat:1.8.1.3
          args:
            - "-d"
            - "-d"
            - "TCP-LISTEN:32400,fork,reuseaddr"
            - "TCP:10.1.10.194:32400"
          ports:
            - containerPort: 32400
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
