cluster/apps/plex-route/endpoints.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: plex-service
  namespace: media
  labels:
    kubernetes.io/service-name: plex-service
addressType: IPv4
endpoints:
  - addresses:
      - "10.1.10.194"
    conditions:
      ready: true
ports:
  - name: http
    protocol: TCP
    port: 32400

---
apiVersion: v1
kind: Endpoints
metadata:
  name: plex-service
  namespace: media
subsets:
  - addresses:
      - ip: 10.1.10.194
    ports:
      - name: http
        port: 32400
        protocol: TCP
