cluster/apps/plex-route/manual-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-service
  namespace: media
spec:
  selector:
    app.kubernetes.io/name: plex-proxy
  ports:
    - protocol: TCP
      port: 32400 # The service port can be anything, but matching is clear.
      targetPort: 32400 # This must match the port in the Endpoints object.
